--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-elements": "^2.2.1",
+    "react-native-gesture-handler": "^1.7.0",
+    "react-native-reanimated": "^1.13.0",
     "react-native-router-flux": "^4.2.0",
+    "react-native-screens": "^2.10.1",
     "react-native-scrollable-tab-view": "^1.0.0",
     "react-native-vector-icons": "^7.0.0"
   },
