--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "react-native": "0.63.2",
     "react-native-elements": "^2.2.1",
     "react-native-gesture-handler": "^1.7.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal": "^11.5.6",
     "react-native-reanimated": "^1.13.0",
     "react-native-router-flux": "^4.2.0",
     "react-native-screens": "^2.10.1",
     "react-native-scrollable-tab-view": "^1.0.0",
-    "react-native-vector-icons": "^7.0.0"
+    "react-native-vector-icons": "^7.0.0",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -29,6 +33,7 @@
     "@types/react": "^16.9.47",
     "@types/react-native": "^0.63.10",
     "@types/react-native-scrollable-tab-view": "^0.10.1",
+    "@types/react-redux": "^7.1.9",
     "@types/react-test-renderer": "^16.9.3",
     "babel-jest": "^25.1.0",
     "eslint": "^6.5.1",
