--- a/package.json
+++ b/package.json
@@ -4,21 +4,27 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "release": "react-native run-android --variant=release",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/viewpager": "^4.1.6",
+    "@react-navigation/bottom-tabs": "^5.8.0",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
+    "immutable": "^4.0.0-rc.12",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-elements": "^2.2.1",
-    "react-native-gesture-handler": "^1.7.0",
+    "react-native-gesture-handler": "^1.8.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.5.6",
     "react-native-reanimated": "^1.13.0",
-    "react-native-router-flux": "^4.2.0",
+    "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.10.1",
     "react-native-scrollable-tab-view": "^1.0.0",
     "react-native-vector-icons": "^7.0.0",
@@ -29,9 +35,12 @@
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
+    "@types/immutable": "^3.8.7",
     "@types/jest": "^26.0.10",
     "@types/react": "^16.9.47",
     "@types/react-native": "^0.63.10",
+    "@types/react-native-elements": "^0.18.0",
+    "@types/react-native-modal": "^4.1.1",
     "@types/react-native-scrollable-tab-view": "^0.10.1",
     "@types/react-redux": "^7.1.9",
     "@types/react-test-renderer": "^16.9.3",
