--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-screens": "^2.10.1",
     "react-native-scrollable-tab-view": "^1.0.0",
     "react-native-storage": "^1.0.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^7.0.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5"
