--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "react-native": "0.63.2",
     "react-native-elements": "^2.2.1",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.5.6",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.10.1",
     "react-native-scrollable-tab-view": "^1.0.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-storage": "^1.0.1",
-    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^7.0.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5"
@@ -45,6 +46,7 @@
     "@types/react-native-elements": "^0.18.0",
     "@types/react-native-modal": "^4.1.1",
     "@types/react-native-scrollable-tab-view": "^0.10.1",
+    "@types/react-native-snap-carousel": "^3.8.2",
     "@types/react-redux": "^7.1.9",
     "@types/react-test-renderer": "^16.9.3",
     "babel-jest": "^25.1.0",
