--- a/ios/Podfile
+++ b/ios/Podfile
@@ -15,6 +15,8 @@ target 'crcomic' do
   pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
 
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
   target 'crcomicTests' do
     inherit! :complete
     # Pods for testing
