--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crcomic",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -8,7 +8,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "mumu": "adb connect 127.0.0.1:7555"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.0",
