--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
       "moduleResolution": "node",
       "noEmit": true,
       "strict": true,
-      "target": "esnext"
+      "target": "esnext",
+      "typeRoots" : ["./node_modules/@types", "./api/types"]
     },
     "exclude": [
       "node_modules",
